--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -25,9 +25,12 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
     "jquery": "^3.5.1",
+    "ng2-currency-mask": "^5.3.1",
+    "ng2-search-filter": "^0.5.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
+    "web-animations-js": "^2.3.2",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
